| Summary: | ASTERISK-28801: [patch] stasis: Avoid always true warnings with clang. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2020-04-02 12:12:57 | Date Closed: | 2020-04-08 09:23:39 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | 13.32.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | clang 9.0 | Attachments: | ( 0) clang_stasis.patch |
| Description: | Review [4541|https://reviewboard.asterisk.org/r/4541/] (ASTERISK-24917) resolved warnings raised by the compiler clang already. However, this one got missed. And, why ever, I did not notice this before although the issue was introduced with ASTERISK-20887 (Review [2339|https://reviewboard.asterisk.org/r/2339/]). This issue is present in Asterisk 13 only, because ASTERISK-28264 changed the code dramatically. However, that change was not backported to Asterisk 13, see Review [11103|https://gerrit.asterisk.org/11103].{code}stasis.c:464:14: warning: address of array 'topic->name' will always evaluate to 'true' [-Wpointer-bool-conversion]
if (!topic->name || res) ~~~~~~~~^~~~ {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-02 12:12:58.798-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-04-08 09:23:39.655-0500 Change 14083 merged by Friendly Automation: stasis: Avoid always true warnings with clang. [https://gerrit.asterisk.org/c/asterisk/+/14083|https://gerrit.asterisk.org/c/asterisk/+/14083] | ||