stasis: Avoid always true warnings with clang.

ASTERISK-28801

Change-Id: I63ba125226b9fe8a018bd28825c877603eb8f398